# n8n-data_extraction

./: .gitignore  LLM_____.json  README.md  docker-compose.staging.yml  docker-compose.yml
caddy/: Dockerfile  README.md
caddy/config/: Caddyfile  data_extraction.conf
n8n/: Dockerfile
python/: Dockerfile
python/srv/fuzzy_match/: fuzzy_match.py  main.py  pyproject.toml  run_match.py
python/srv/fuzzy_match/models/: match_request.py  match_response.py
